change readme  ,and fix a bug in gongjuactivity.java

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ src/Kechengbiao2.0/gradlew
 src/Kechengbiao2.0/gradlew.bat
 src/Kechengbiao2.0/gradle/
 src/Kechengbiao2.0/app/proguard-rules.pro
+src/Kechengbiao2.0/app/build.gradle
